perf: fix the burger menu overlaps with the wp admin bar

--- a/src/scss/component/_global-menu.scss
+++ b/src/scss/component/_global-menu.scss
@@ -74,7 +74,7 @@
 	position: fixed;
 	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
-	z-index: 999998;
+	z-index: 9998;
 	top: 0;
 	left: -100%;
 	width: 100%;
@@ -100,7 +100,7 @@
 	top: 18px;
 	right: 18px;
 	left: auto;
-	z-index: 999999;
+	z-index: 9999;
 
 	width: 42px;
 	height: 42px;
@@ -132,7 +132,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		z-index: 999997;
+		z-index: 9997;
 		background: rgba(0, 0, 0, 0.4);
 	}
 }
